Fix header spacing

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body, html {
 
 /*Header*/
 .header {
-	padding-bottom: 30px;
+	padding-bottom: 5px;
 	height: 12.5%;
 	background-color: white;
 }
